# cars

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.deps  Dockerfile.jupyter  Dockerfile.local  Dockerfile.tutorial  MANIFEST.in  Makefile  NOTICE  README.md  env_cars.sh  gdal-config  meson.build  pyproject.toml  pytest.ini  ref_updating.py  requirements.txt  setup.cfg  setup.py  sonar-project.properties  template_env_cars.sh  version.py  version.sh
.github/workflows/: cars-ci.yml
.gitlab/issue_templates/: Bug.md  Proposal.md  Refacto.md  Release.md
.gitlab/merge_request_templates/: MR.md
cars/: __init__.py  bundleadjustment.py  cars.py  cluster.py  compute_dsm.py  configuration.py  configuration_correlator.py  constants.py  datasets.py  devibrate.py  extractroi.py  filtering.py  mask.py  mask_classes.py  matching_regularisation.py  otb_pipelines.py  parameters.py  pipelines.py  prepare.py  preprocessing.py  projection.py  rasterization.py  readwrite.py  starter.py  static_configuration.json  stereo.py  tiling.py  utils.py
cars/applications/: __init__.py  application.py  application_constants.py  application_template.py
cars/cluster/: __init__.py  dask.py  dask_mode.py  tbb.py
cars/conf/: __init__.py  geo_parameters.py  input_parameters.py  json_schema.py  log_conf.py  mask_classes.py  mask_cst.py  output_compute_dsm.py  output_prepare.py  parameters.py  static_conf.py  static_configuration.json
cars/core/: __init__.py  cars_logging.py  constants.py  constants_disparity.py  create_mask  datasets.py  former_confs_utils.py  inputs.py  otb_adapters.py  outputs.py  preprocessing.py  projection.py  roi_tools.py  tiling.py  utils.py
cars/data_structures/: __init__.py  cars_dataset.py  cars_dataset_transformations.py  cars_dict.py  corresponding_tiles_tools.py  dataframe_converter.py  format_transformation.py
cars/io/: __init__.py  output.py
cars/lib/: __init__.py
cars/orchestrator/: __init__.py  achievement_tracker.py  memory_tools.py  orchestrator.py  orchestrator_constants.py  tiles_profiler.py
cars/pipelines/: __init__.py  compute_dsm.py  pipeline.py  pipeline_constants.py  pipeline_template.py  prepare.py  wrappers.py  write_dsm.py
cars/plugins/: __init__.py  otb_pipelines.py
cars/steps/: __init__.py  devib.py  points_cloud.py  rasterization.py  triangulation.py
ci/: cars-docker-build.yml  cars-no-docker-build.yml  hadolint_RNC_A_B_C_D.yaml
ci/cars-deps-env/: Dockerfile
dask/: README.md  distributed.yaml
docs/: Makefile  README.md  cli_usage.rst  generalities.rst  install.rst  notebooks.rst  requirements-doc.txt  requirements-docs.txt  requirements.txt
docs/source/: Additional_tips.rst  architecture.rst  bibliography.rst  cars.rst  cars_configs_extension.py  cli_usage.rst  common.rst  conf.py  contributing_the_project.rst  core_modules.rst  design.rst  developer.rst  developer_guide.rst  docker_guide.rst  dockerguide.rst  examples.rst  faq.rst  generalities.rst  getting_started.rst  glossary.rst  how_to_use_CARS.rst  how_to_use_CARS?.rst  howto.rst  index.rst  install.rst  install_with_otb.rst  installation.rst  links_substitution.rst  main_principles.rst  notebooks.rst  quick_start.rst  recipes.rst  references.rst  related_software.rst  troubleshooting_and_faqs.rst  usage.rst  user_manual.rst  user_manual_advanced_configuration.rst  user_manual_compute_cli.rst  user_manual_input_data.rst  (+4 more)
notebooks/: cars_generic.ipynb  cars_pipelines.ipynb  compute_dsm_memory_monitoring.ipynb  data_notebook.tar.bz2  epipolar_distributions.ipynb  full_res_dsm_pipeline.ipynb  lowres_dem_fit.ipynb  step_by_step_compute_dsm.ipynb  utils.py
otb_remote_module/: CMakeLists.txt  otb-module.cmake
otb_remote_module/app/: CMakeLists.txt  otbBuildMask.cxx  otbConvertSensorToGeoMultiPointFast.cxx  otbConvertSensorToGeoPointFast.cxx  otbDEMReader.cxx  otbEpipolarSparseMatching.cxx  otbEpipolarTriangulation.cxx  otbLocalizeInverse.cxx
otb_remote_module/data/: rectified_ref.tif  rectified_ref_mask.tif  rectified_sec.tif  rectified_sec_mask.tif
otb_remote_module/include/: otbOptiDisparityMapTo3DFilter.h  otbOptiDisparityMapTo3DFilter.hxx  otbVlfeatSiftImageFilter.h  otbVlfeatSiftImageFilter.hxx
static_conf/: static_configuration.json
tests/: __init__.py  conftest.py  helpers.py  test_bundleadjustment.py  test_cars.py  test_cars_cli.py  test_cluster.py  test_configuration_correlator.py  test_end2end.py  test_end2end_shareloc.py  test_filtering.py  test_inputs.py  test_mask.py  test_mask_classes.py  test_matching_regularisation.py  test_notebook_helpers.py  test_notebooks.py  test_output.py  test_pipelines.py  test_preprocessing.py  test_projection.py  test_rasterization.py  test_readwrite.py  test_stereo.py  test_tiling.py  test_utils.py  utils.py
tests/applications/: __init__.py
tests/cluster/: __init__.py  test_cluster.py  test_dask_mode.py
tests/conf/: __init__.py  test_mask_classes.py
tests/core/: __init__.py  test_inputs.py  test_outputs.py  test_preprocessing.py  test_projection.py  test_roi_tools.py  test_tiling.py  test_utils.py
tests/data_structure/: __init__.py  test_arrays.py  test_cars_dataset_transformation.py  test_corresponding_tiles.py  test_format_transformation.py  test_points.py  test_tile_manager.py
tests/orchestrator/: __init__.py
tests/pipelines/: __init__.py  test_advanced_parameters.py  test_default.py  test_dsm_inputs.py  test_output.py  test_pipeline_template.py  (+3 more)
tutorials/: data_gizeh.tar.bz2.md5sum  data_gizeh_small.tar.bz2  data_gizeh_small.tar.bz2.md5sum  dsm_step_by_step_Alice.ipynb  main_tutorial.ipynb  notebook_helpers.py  notebook_helpers_cars_free.py  quick_start.sh  quick_start_advanced.sh  quick_start_docker.sh  sensor_to_dense_dsm_matching_methods_comparison.ipynb  sensor_to_dense_dsm_step_by_step.ipynb  sensor_to_dsm_from_a_priori.ipynb  sensor_to_full_resolution_dsm_matching_methods_comparison.ipynb  sensor_to_full_resolution_dsm_step_by_step.ipynb
(+1734 files in other folders)
