# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# enable setuptools_scm version
[tool.setuptools_scm]

[tool.black]
# https://github.com/psf/black
line-length = 80
exclude = "(.eggs|.git|.mypy_cache|.nox|.tox|_build|build|dist|venv)"

[tool.isort]
profile = 'black'
line_length = 80
known_third_party = [ "dask" ]
